// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Skip-Connect-Machine should render correctly in mac 1`] = `
<SVGEditor>
  <div>
    <DummyTaskInterpreterPanel>
      <div>
        This is dummy TaskInterpreterPanel
      </div>
    </DummyTaskInterpreterPanel>
    <div
      className="mac"
      id="svg_editor"
    >
      <div
        className="mac"
        id="rulers"
      >
        <div
          id="ruler_corner"
        />
        <div
          id="ruler_x"
        >
          <div>
            <canvas
              height={15}
            />
          </div>
        </div>
        <div
          id="ruler_y"
        >
          <div>
            <canvas
              width={15}
            />
          </div>
        </div>
        <div
          id="ruler_unit_shower"
        >
          inch
        </div>
      </div>
      <div
        className="mac"
        id="workarea"
      >
        <style
          dangerouslySetInnerHTML={
            Object {
              "__html": "",
            }
          }
          id="styleoverrides"
          media="screen"
          scoped="scoped"
          type="text/css"
        />
        <div
          id="svgcanvas"
          style={
            Object {
              "position": "relative",
            }
          }
        />
      </div>
      <DummyRightPanelContextProvider>
        <div>
          This is dummy RightPanelContextProvider
          <DummyRightPanel>
            <div>
              This is dummy RightPanel
            </div>
          </DummyRightPanel>
        </div>
      </DummyRightPanelContextProvider>
      <div
        id="main_button"
      >
        <div
          className="tool_button"
          id="main_icon"
          title="Main Menu"
        >
          <span>
            SVG-Edit
          </span>
          <div
            id="logo"
          />
          <div
            className="dropdown"
          />
        </div>
        <div
          id="main_menu"
        >
          <ul>
            <li
              id="tool_clear"
            >
              <div />
              New Image (N)
            </li>
            <li
              id="tool_open"
              style={
                Object {
                  "display": "none",
                }
              }
            >
              <div
                id="fileinputs"
              >
                <div />
              </div>
              Open SVG
            </li>
            <li
              id="tool_import"
              style={
                Object {
                  "display": "none",
                }
              }
            >
              <div
                id="fileinputs_import"
              >
                <div />
              </div>
              Import Image
            </li>
            <li
              id="tool_save"
            >
              <div />
              Save Image (S)
            </li>
            <li
              id="tool_export"
            >
              <div />
              Export
            </li>
            <li
              id="tool_docprops"
            >
              <div />
              Document Properties (D)
            </li>
          </ul>
          <p>
            <a
              href="https://github.com/SVG-Edit/svgedit"
              rel="noreferrer"
              target="_blank"
            >
              SVG-edit Home Page
            </a>
          </p>
          <button
            id="tool_prefs_option"
            type="button"
          >
            Editor Options
          </button>
        </div>
      </div>
      <div
        className="tools_panel"
        id="tools_top"
      >
        <div
          id="editor_panel"
        >
          <div
            className="tool_sep"
          />
          <div
            className="push_button"
            id="tool_source"
            title="Edit Source [U]"
          />
          <div
            className="tool_button"
            id="tool_wireframe"
            title="Wireframe Mode [F]"
          />
        </div>
        <div
          id="history_panel"
        >
          <div
            className="tool_sep"
          />
          <div
            className="push_button tool_button_disabled"
            id="tool_undo"
            title="Undo [Z]"
          />
          <div
            className="push_button tool_button_disabled"
            id="tool_redo"
            title="Redo [Y]"
          />
        </div>
        <div
          id="selected_panel"
        >
          <div
            className="toolset"
          >
            <div
              className="tool_sep"
            />
            <div
              className="push_button"
              id="tool_clone"
              title="Duplicate Element [D]"
            />
            <div
              className="push_button"
              id="tool_delete"
              title="Delete Element [Delete/Backspace]"
            />
            <div
              className="tool_sep"
            />
            <div
              className="push_button"
              id="tool_move_top"
              title="Bring to Front [ Ctrl+Shift+] ]"
            />
            <div
              className="push_button"
              id="tool_move_bottom"
              title="Send to Back [ Ctrl+Shift+[ ]"
            />
            <div
              className="push_button"
              id="tool_topath"
              title="Convert to Path"
            />
            <div
              className="push_button"
              id="tool_reorient"
              title="Reorient path"
            />
            <div
              className="push_button"
              id="tool_make_link"
              title="Make (hyper)link"
            />
            <div
              className="tool_sep"
            />
            <label
              id="idLabel"
              title="Identify the element"
            >
              <span>
                id:
              </span>
              <input
                className="attr_changer"
                data-attr="id"
                id="elem_id"
                size={10}
                type="text"
              />
            </label>
            <label
              id="classLabel"
              title="Element class"
            >
              <span>
                class:
              </span>
              <input
                className="attr_changer"
                data-attr="class"
                id="elem_class"
                size={10}
                type="text"
              />
            </label>
          </div>
          <label
            className="toolset"
            id="tool_angle"
            title="Change rotation angle"
          >
            <span
              className="icon_label"
              id="angleLabel"
            />
            <input
              defaultValue={0}
              id="angle"
              size={2}
              type="text"
            />
          </label>
          <div
            className="toolset"
            id="tool_blur"
            title="Change gaussian blur value"
          >
            <label>
              <span
                className="icon_label"
                id="blurLabel"
              />
              <input
                defaultValue={0}
                id="blur"
                size={2}
                type="text"
              />
            </label>
            <div
              className="dropdown"
              id="blur_dropdown"
            >
              <button
                type="button"
              />
              <ul>
                <li
                  className="special"
                >
                  <div
                    id="blur_slider"
                  />
                </li>
              </ul>
            </div>
          </div>
          <div
            className="dropdown toolset"
            id="tool_position"
            title="Align Element to Page"
          >
            <div
              className="icon_label"
              id="cur_position"
            />
            <button
              type="button"
            />
          </div>
          <div
            className="toolset"
            id="xy_panel"
          >
            <label>
              x:
               
              <input
                className="attr_changer"
                data-attr="x"
                id="selected_x"
                size={3}
                title="Change X coordinate"
              />
            </label>
            <label>
              y:
               
              <input
                className="attr_changer"
                data-attr="y"
                id="selected_y"
                size={3}
                title="Change Y coordinate"
              />
            </label>
          </div>
        </div>
        <div
          id="multiselected_panel"
        >
          <div
            className="tool_sep"
          />
          <div
            className="push_button"
            id="tool_clone_multi"
            title="Clone Elements [C]"
          />
          <div
            className="push_button"
            id="tool_delete_multi"
            title="Delete Selected Elements [Delete/Backspace]"
          />
          <div
            className="tool_sep"
          />
          <div
            className="push_button"
            id="tool_group_elements"
            title="Group Elements [G]"
          />
          <div
            className="push_button"
            id="tool_make_link_multi"
            title="Make (hyper)link"
          />
          <div
            className="push_button"
            id="tool_alignleft"
            title="Align Left"
          />
          <div
            className="push_button"
            id="tool_aligncenter"
            title="Align Center"
          />
          <div
            className="push_button"
            id="tool_alignright"
            title="Align Right"
          />
          <div
            className="push_button"
            id="tool_aligntop"
            title="Align Top"
          />
          <div
            className="push_button"
            id="tool_alignmiddle"
            title="Align Middle"
          />
          <div
            className="push_button"
            id="tool_alignbottom"
            title="Align Bottom"
          />
          <label
            id="tool_align_relative"
          >
            <span
              id="relativeToLabel"
            >
              relative to:
            </span>
            <select
              id="align_relative_to"
              title="Align relative to ..."
            >
              <option
                id="selected_objects"
                value="selected"
              >
                selected objects
              </option>
              <option
                id="largest_object"
                value="largest"
              >
                largest object
              </option>
              <option
                id="smallest_object"
                value="smallest"
              >
                smallest object
              </option>
              <option
                id="page"
                value="page"
              >
                page
              </option>
            </select>
          </label>
          <div
            className="tool_sep"
          />
        </div>
        <div
          id="rect_panel"
        >
          <div
            className="toolset"
          >
            <label
              id="rect_width_tool"
              title="Change rectangle width"
            >
              <span
                className="icon_label"
                id="rwidthLabel"
              />
              <input
                className="attr_changer"
                data-attr="width"
                id="rect_width"
                size={3}
              />
            </label>
            <label
              id="rect_height_tool"
              title="Change rectangle height"
            >
              <span
                className="icon_label"
                id="rheightLabel"
              />
              <input
                className="attr_changer"
                data-attr="height"
                id="rect_height"
                size={3}
              />
            </label>
          </div>
          <label
            className="toolset"
            id="cornerRadiusLabel"
            title="Change Rectangle Corner Radius"
          >
            <span
              className="icon_label"
            />
            <input
              data-attr="Corner Radius"
              defaultValue={0}
              id="rect_rx"
              size={3}
              type="text"
            />
          </label>
        </div>
        <div
          id="image_panel"
        >
          <div
            className="toolset"
          >
            <label>
              <span
                className="icon_label"
                id="iwidthLabel"
              />
              <input
                className="attr_changer"
                data-attr="width"
                id="image_width"
                size={3}
                title="Change image width"
              />
            </label>
            <label>
              <span
                className="icon_label"
                id="iheightLabel"
              />
              <input
                className="attr_changer"
                data-attr="height"
                id="image_height"
                size={3}
                title="Change image height"
              />
            </label>
          </div>
          <div
            className="toolset"
          >
            <label
              id="tool_image_url"
            >
              url:
              <input
                id="image_url"
                size={35}
                title="Change URL"
                type="text"
              />
            </label>
            <label
              id="tool_change_image"
            >
              <button
                id="change_image_url"
                style={
                  Object {
                    "display": "none",
                  }
                }
                type="button"
              >
                Change Image
              </button>
              <span
                id="url_notice"
                title="NOTE: This image cannot be embedded. It will depend on this path to be displayed"
              />
            </label>
          </div>
        </div>
        <div
          id="circle_panel"
        >
          <div
            className="toolset"
          >
            <label
              id="tool_circle_cx"
            >
              cx:
              <input
                className="attr_changer"
                data-attr="cx"
                id="circle_cx"
                size={3}
                title="Change circle's cx coordinate"
              />
            </label>
            <label
              id="tool_circle_cy"
            >
              cy:
              <input
                className="attr_changer"
                data-attr="cy"
                id="circle_cy"
                size={3}
                title="Change circle's cy coordinate"
              />
            </label>
          </div>
          <div
            className="toolset"
          >
            <label
              id="tool_circle_r"
            >
              r:
              <input
                className="attr_changer"
                data-attr="r"
                id="circle_r"
                size={3}
                title="Change circle's radius"
              />
            </label>
          </div>
        </div>
        <div
          id="ellipse_panel"
        >
          <div
            className="toolset"
          >
            <label
              id="tool_ellipse_cx"
            >
              cx:
              <input
                className="attr_changer"
                data-attr="cx"
                id="ellipse_cx"
                size={3}
                title="Change ellipse's cx coordinate"
              />
            </label>
            <label
              id="tool_ellipse_cy"
            >
              cy:
              <input
                className="attr_changer"
                data-attr="cy"
                id="ellipse_cy"
                size={3}
                title="Change ellipse's cy coordinate"
              />
            </label>
          </div>
          <div
            className="toolset"
          >
            <label
              id="tool_ellipse_rx"
            >
              rx:
              <input
                className="attr_changer"
                data-attr="rx"
                id="ellipse_rx"
                size={3}
                title="Change ellipse's x radius"
              />
            </label>
            <label
              id="tool_ellipse_ry"
            >
              ry:
              <input
                className="attr_changer"
                data-attr="ry"
                id="ellipse_ry"
                size={3}
                title="Change ellipse's y radius"
              />
            </label>
          </div>
        </div>
        <div
          id="line_panel"
        >
          <div
            className="toolset"
          >
            <label
              id="tool_line_x1"
            >
              x1:
              <input
                className="attr_changer"
                data-attr="x1"
                id="line_x1"
                size={3}
                title="Change line's starting x coordinate"
              />
            </label>
            <label
              id="tool_line_y1"
            >
              y1:
              <input
                className="attr_changer"
                data-attr="y1"
                id="line_y1"
                size={3}
                title="Change line's starting y coordinate"
              />
            </label>
          </div>
          <div
            className="toolset"
          >
            <label
              id="tool_line_x2"
            >
              x2:
              <input
                className="attr_changer"
                data-attr="x2"
                id="line_x2"
                size={3}
                title="Change line's ending x coordinate"
              />
            </label>
            <label
              id="tool_line_y2"
            >
              y2:
              <input
                className="attr_changer"
                data-attr="y2"
                id="line_y2"
                size={3}
                title="Change line's ending y coordinate"
              />
            </label>
          </div>
        </div>
        <div
          id="text_panel"
        >
          <div
            className="toolset"
          >
            <div
              className="tool_button"
              id="tool_bold"
              title="Bold Text [B]"
            >
              <span />
              B
            </div>
            <div
              className="tool_button"
              id="tool_italic"
              title="Italic Text [I]"
            >
              <span />
              i
            </div>
          </div>
          <div
            className="toolset"
            id="tool_font_family"
          >
            <label>
              <input
                id="font_family"
                size={12}
                title="Change Font Family"
                type="text"
              />
            </label>
            <div
              className="dropdown"
              id="font_family_dropdown"
            >
              <button
                type="button"
              />
              <ul>
                <li
                  style={
                    Object {
                      "fontFamily": "serif",
                    }
                  }
                >
                  Serif
                </li>
                <li
                  style={
                    Object {
                      "fontFamily": "sans-serif",
                    }
                  }
                >
                  Sans-serif
                </li>
                <li
                  style={
                    Object {
                      "fontFamily": "cursive",
                    }
                  }
                >
                  Cursive
                </li>
                <li
                  style={
                    Object {
                      "fontFamily": "fantasy",
                    }
                  }
                >
                  Fantasy
                </li>
                <li
                  style={
                    Object {
                      "fontFamily": "monospace",
                    }
                  }
                >
                  Monospace
                </li>
              </ul>
            </div>
          </div>
          <label
            id="tool_font_size"
            title="Change Font Size"
          >
            <span
              className="icon_label"
              id="font_sizeLabel"
            />
            <input
              defaultValue={0}
              id="font_size"
              size={3}
              type="text"
            />
          </label>
          <input
            id="text"
            size={35}
            type="text"
          />
        </div>
        <div
          id="container_panel"
        >
          <div
            className="tool_sep"
          />
          <label
            id="group_title"
            title="Group identification label"
          >
            <span>
              label:
            </span>
            <input
              data-attr="title"
              id="g_title"
              size={10}
              type="text"
            />
          </label>
        </div>
        <div
          id="use_panel"
        >
          <div
            className="push_button"
            id="tool_unlink_use"
            title="Break link to reference element (make unique)"
          />
        </div>
        <div
          id="g_panel"
        >
          <div
            className="push_button"
            id="tool_ungroup"
            title="Ungroup Elements [G]"
          />
        </div>
        <div
          id="a_panel"
        >
          <label
            id="tool_link_url"
            title="Set link URL (leave empty to remove)"
          >
            <span
              className="icon_label"
              id="linkLabel"
            />
            <input
              id="link_url"
              size={35}
              type="text"
            />
          </label>
        </div>
        <div
          id="path_node_panel"
        >
          <div
            className="tool_sep"
          />
          <div
            className="tool_button push_button_pressed"
            id="tool_node_link"
            title="Link Control Points"
          />
          <div
            className="tool_sep"
          />
          <label
            id="tool_node_x"
          >
            x:
            <input
              className="attr_changer"
              data-attr="x"
              id="path_node_x"
              size={3}
              title="Change node's x coordinate"
            />
          </label>
          <label
            id="tool_node_y"
          >
            y:
            <input
              className="attr_changer"
              data-attr="y"
              id="path_node_y"
              size={3}
              title="Change node's y coordinate"
            />
          </label>
          <select
            defaultValue={4}
            id="seg_type"
            title="Change Segment type"
          >
            <option
              id="straight_segments"
              value={4}
            >
              Straight
            </option>
            <option
              id="curve_segments"
              value={6}
            >
              Curve
            </option>
          </select>
          <div
            className="tool_button"
            id="tool_node_clone"
            title="Clone Node"
          />
          <div
            className="tool_button"
            id="tool_node_delete"
            title="Delete Node"
          />
          <div
            className="tool_button"
            id="tool_openclose_path"
            title="Open/close sub-path"
          />
          <div
            className="tool_button"
            id="tool_add_subpath"
            title="Add sub-path"
          />
        </div>
      </div>
       
      <div
        id="cur_context_panel"
      />
      <div
        className="tools_panel"
        id="tools_left"
      >
        <div
          className="tool_button"
          id="tool_select"
          title="Select Tool"
        />
        <div
          className="tool_button"
          id="tool_fhpath"
          title="Pencil Tool"
        />
        <div
          className="tool_button"
          id="tool_line"
          title="Line Tool"
        />
        <div
          className="tool_button flyout_current"
          id="tools_rect_show"
          title="Square/Rect Tool"
        >
          <div
            className="flyout_arrow_horiz"
          />
        </div>
        <div
          className="tool_button flyout_current"
          id="tools_ellipse_show"
          title="Ellipse/Circle Tool"
        >
          <div
            className="flyout_arrow_horiz"
          />
        </div>
        <div
          className="tool_button"
          id="tool_path"
          title="Path Tool"
        />
        <div
          className="tool_button"
          id="tool_text"
          title="Text Tool"
        />
        <div
          className="tool_button"
          id="tool_image"
          title="Image Tool"
        />
        <div
          className="tool_button"
          id="tool_zoom"
          title="Zoom Tool [Ctrl+Up/Down]"
        />
        <div
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            id="tool_rect"
            title="Rectangle"
          />
          <div
            id="tool_square"
            title="Square"
          />
          <div
            id="tool_fhrect"
            title="Free-Hand Rectangle"
          />
          <div
            id="tool_ellipse"
            title="Ellipse"
          />
          <div
            id="tool_path"
            title="Path"
          />
          <div
            id="tool_polygon"
            title="Polygon"
          />
          <div
            id="tool_grid"
            title="Grid Array"
          />
          <div
            id="tool_circle"
            title="Circle"
          />
          <div
            id="tool_fhellipse"
            title="Free-Hand Ellipse"
          />
        </div>
      </div>
       
      <div
        className="tools_panel"
        id="tools_bottom"
      >
        <div
          className="toolset"
          id="zoom_panel"
          title="Change zoom level"
        >
          <label>
            <span
              className="zoom_tool icon_label"
              id="zoomLabel"
            />
            <input
              defaultValue={100}
              id="zoom"
              size={3}
              type="text"
            />
          </label>
          <div
            className="tool_sep"
          />
        </div>
        <div
          id="tools_bottom_2"
        >
          <div
            id="color_tools"
          >
            <div
              className="color_tool"
              id="tool_fill"
            >
              <label
                className="icon_label"
                htmlFor="fill_color"
                title="Change fill color"
              />
              <div
                className="color_block"
              >
                <div
                  id="fill_bg"
                />
                <div
                  className="color_block"
                  id="fill_color"
                />
              </div>
            </div>
            <div
              className="color_tool"
              id="tool_stroke"
            >
              <label
                className="icon_label"
                title="Change stroke color"
              />
              <div
                className="color_block"
              >
                <div
                  id="stroke_bg"
                />
                <div
                  className="color_block"
                  id="stroke_color"
                  title="Change stroke color"
                />
              </div>
              <label
                className="stroke_label"
              >
                <input
                  data-attr="Stroke Width"
                  defaultValue={5}
                  id="stroke_width"
                  size={2}
                  title="Change stroke width by 1, shift-click to change by 0.1"
                  type="text"
                />
              </label>
              <div
                id="toggle_stroke_tools"
                title="Show/hide more stroke tools"
              />
              <label
                className="stroke_tool"
              >
                <select
                  defaultValue="none"
                  id="stroke_style"
                  title="Change stroke dash style"
                >
                  <option
                    value="none"
                  >
                    —
                  </option>
                  <option
                    value="2,2"
                  >
                    ...
                  </option>
                  <option
                    value="5,5"
                  >
                    - -
                  </option>
                  <option
                    value="5,2,2,2"
                  >
                    - .
                  </option>
                  <option
                    value="5,2,2,2,2,2"
                  >
                    - ..
                  </option>
                </select>
              </label>
              <div
                className="stroke_tool dropdown"
                id="stroke_linejoin"
              >
                <div
                  id="cur_linejoin"
                  title="Linejoin: Miter"
                />
                <button
                  type="button"
                />
              </div>
              <div
                className="stroke_tool dropdown"
                id="stroke_linecap"
              >
                <div
                  id="cur_linecap"
                  title="Linecap: Butt"
                />
                <button
                  type="button"
                />
              </div>
            </div>
            <div
              className="color_tool"
              id="tool_opacity"
              title="Change selected item opacity"
            >
              <label>
                <span
                  className="icon_label"
                  id="group_opacityLabel"
                />
                <input
                  defaultValue={100}
                  id="group_opacity"
                  size={3}
                  type="text"
                />
              </label>
              <div
                className="dropdown"
                id="opacity_dropdown"
              >
                <button
                  type="button"
                />
                <ul>
                  <li>
                    0%
                  </li>
                  <li>
                    25%
                  </li>
                  <li>
                    50%
                  </li>
                  <li>
                    75%
                  </li>
                  <li>
                    100%
                  </li>
                  <li
                    className="special"
                  >
                    <div
                      id="opac_slider"
                    />
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          id="tools_bottom_3"
        >
          <div
            id="palette_holder"
          >
            <div
              id="palette"
              title="Click to change fill color, shift-click to change stroke color"
            />
          </div>
        </div>
      </div>
      <div
        className="dropdown"
        id="option_lists"
      >
        <ul
          id="linejoin_opts"
        >
          <li
            className="tool_button current"
            id="linejoin_miter"
            title="Linejoin: Miter"
          />
          <li
            className="tool_button"
            id="linejoin_round"
            title="Linejoin: Round"
          />
          <li
            className="tool_button"
            id="linejoin_bevel"
            title="Linejoin: Bevel"
          />
        </ul>
        <ul
          id="linecap_opts"
        >
          <li
            className="tool_button current"
            id="linecap_butt"
            title="Linecap: Butt"
          />
          <li
            className="tool_button"
            id="linecap_square"
            title="Linecap: Square"
          />
          <li
            className="tool_button"
            id="linecap_round"
            title="Linecap: Round"
          />
        </ul>
        <ul
          className="optcols3"
          id="position_opts"
        >
          <li
            className="push_button"
            id="tool_posleft"
            title="Align Left"
          />
          <li
            className="push_button"
            id="tool_poscenter"
            title="Align Center"
          />
          <li
            className="push_button"
            id="tool_posright"
            title="Align Right"
          />
          <li
            className="push_button"
            id="tool_postop"
            title="Align Top"
          />
          <li
            className="push_button"
            id="tool_posmiddle"
            title="Align Middle"
          />
          <li
            className="push_button"
            id="tool_posbottom"
            title="Align Bottom"
          />
        </ul>
      </div>
      <div
        id="color_picker"
      />
    </div>
     
    <div
      id="svg_source_editor"
    >
      <div
        className="overlay"
      />
      <div
        id="svg_source_container"
      >
        <div
          className="toolbar_button"
          id="tool_source_back"
        >
          <button
            id="tool_source_save"
            type="button"
          >
            Apply Changes
          </button>
          <button
            id="tool_source_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          id="save_output_btns"
        >
          <p
            id="copy_save_note"
          >
            Copy the contents of this box into a text editor, then save the file with a .svg extension.
          </p>
          <button
            id="copy_save_done"
            type="button"
          >
            Done
          </button>
        </div>
        <form>
          <textarea
            defaultValue=""
            id="svg_source_textarea"
            spellCheck="false"
          />
        </form>
      </div>
    </div>
    <div
      id="svg_docprops"
    >
      <div
        className="overlay"
      />
      <div
        id="svg_docprops_container"
      >
        <div
          className="toolbar_button"
          id="tool_docprops_back"
        >
          <button
            id="tool_docprops_save"
            type="button"
          >
            OK
          </button>
          <button
            id="tool_docprops_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <fieldset
          id="svg_docprops_docprops"
        >
          <legend
            id="svginfo_image_props"
          >
            Image Properties
          </legend>
          <label>
            <span
              id="svginfo_title"
            >
              Title:
            </span>
            <input
              id="canvas_title"
              type="text"
            />
          </label>
          <fieldset
            id="change_resolution"
          >
            <legend
              id="svginfo_dim"
            >
              Canvas Dimensions
            </legend>
            <label>
              <span
                id="svginfo_width"
              >
                width:
              </span>
               
              <input
                id="canvas_width"
                size={6}
                type="text"
              />
            </label>
            <label>
              <span
                id="svginfo_height"
              >
                height:
              </span>
               
              <input
                id="canvas_height"
                size={6}
                type="text"
              />
            </label>
            <label>
              <select
                defaultValue="predefined"
                id="resolution"
              >
                <option
                  id="selectedPredefined"
                  value="predefined"
                >
                  Select predefined:
                </option>
                <option>
                  640x480
                </option>
                <option>
                  800x600
                </option>
                <option>
                  1024x768
                </option>
                <option>
                  1280x960
                </option>
                <option>
                  1600x1200
                </option>
                <option
                  id="fitToContent"
                  value="content"
                >
                  Fit to Content
                </option>
              </select>
            </label>
          </fieldset>
          <fieldset
            id="image_save_opts"
          >
            <legend
              id="includedImages"
            >
              Included Images
            </legend>
            <label>
              <input
                defaultChecked="checked"
                defaultValue="embed"
                name="image_opt"
                type="radio"
              />
               
              <span
                id="image_opt_embed"
              >
                Embed data (local files)
              </span>
               
            </label>
            <label>
              <input
                defaultValue="ref"
                name="image_opt"
                type="radio"
              />
               
              <span
                id="image_opt_ref"
              >
                Use file reference
              </span>
               
            </label>
          </fieldset>
        </fieldset>
      </div>
    </div>
    <div
      id="svg_prefs"
    >
      <div
        className="overlay"
      />
      <div
        id="svg_prefs_container"
      >
        <div
          className="toolbar_button"
          id="tool_prefs_back"
        >
          <button
            id="tool_prefs_save"
            type="button"
          >
            OK
          </button>
          <button
            id="tool_prefs_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <fieldset>
          <legend
            id="svginfo_editor_prefs"
          >
            Editor Preferences
          </legend>
          <label>
            <span
              id="svginfo_lang"
            >
              Language:
            </span>
            <select
              defaultValue="en"
              id="lang_select"
            >
              <option
                id="lang_de"
                value="de"
              >
                Deutsche
              </option>
              <option
                id="lang_en"
                value="en"
              >
                English
              </option>
              <option
                id="lang_zh-TW"
                value="zh-TW"
              >
                繁體中文
              </option>
              <option
                id="lang_ja"
                value="ja"
              >
                日本語
              </option>
              <option
                id="lang_zh-CN"
                value="es"
              >
                Español
              </option>
              <option
                id="lang_zh-CN"
                value="zh-CN"
              >
                簡中
              </option>
            </select>
          </label>
          <label>
            <span
              id="svginfo_icons"
            >
              Icon size:
            </span>
            <select
              defaultValue="m"
              id="iconsize"
            >
              <option
                id="icon_small"
                value="s"
              >
                Small
              </option>
              <option
                id="icon_medium"
                value="m"
              >
                Medium
              </option>
              <option
                id="icon_large"
                value="l"
              >
                Large
              </option>
              <option
                id="icon_xlarge"
                value="xl"
              >
                Extra Large
              </option>
            </select>
          </label>
          <fieldset
            id="change_background"
          >
            <legend
              id="svginfo_change_background"
            >
              Editor Background
            </legend>
            <div
              id="bg_blocks"
            />
            <label>
              <span
                id="svginfo_bg_url"
              >
                URL:
              </span>
               
              <input
                id="canvas_bg_url"
                type="text"
              />
            </label>
            <p
              id="svginfo_bg_note"
            >
              Note: Background will not be saved with image.
            </p>
          </fieldset>
          <fieldset
            id="change_grid"
          >
            <legend
              id="svginfo_grid_settings"
            >
              Grid
            </legend>
            <label>
              <span
                id="svginfo_snap_onoff"
              >
                Snapping on/off
              </span>
              <input
                defaultValue="snapping_on"
                id="grid_snapping_on"
                type="checkbox"
              />
            </label>
            <label>
              <span
                id="svginfo_snap_step"
              >
                Snapping Step-Size:
              </span>
               
              <input
                defaultValue={10}
                id="grid_snapping_step"
                size={3}
                type="text"
              />
            </label>
            <label>
              <span
                id="svginfo_grid_color"
              >
                Grid color:
              </span>
               
              <input
                defaultValue="#000"
                id="grid_color"
                size={3}
                type="text"
              />
            </label>
          </fieldset>
          <fieldset
            id="units_rulers"
          >
            <legend
              id="svginfo_units_rulers"
            >
              Units & Rulers
            </legend>
            <label>
              <span
                id="svginfo_rulers_onoff"
              >
                Show rulers
              </span>
              <input
                defaultChecked="checked"
                defaultValue="show_rulers"
                id="show_rulers"
                type="checkbox"
              />
            </label>
            <label>
              <span
                id="svginfo_unit"
              >
                Base Unit:
              </span>
              <select
                id="base_unit"
              >
                <option
                  value="px"
                >
                  Pixels
                </option>
                <option
                  value="cm"
                >
                  Centimeters
                </option>
                <option
                  value="mm"
                >
                  Millimeters
                </option>
                <option
                  value="in"
                >
                  Inches
                </option>
                <option
                  value="pt"
                >
                  Points
                </option>
                <option
                  value="pc"
                >
                  Picas
                </option>
                <option
                  value="em"
                >
                  Ems
                </option>
                <option
                  value="ex"
                >
                  Exs
                </option>
              </select>
            </label>
          </fieldset>
        </fieldset>
      </div>
    </div>
    <div
      id="dialog_box"
    >
      <div
        className="overlay"
      />
      <div
        id="dialog_container"
      >
        <div
          id="dialog_content"
        />
        <div
          id="dialog_buttons"
        />
      </div>
    </div>
    <ul
      className="contextMenu"
      id="cmenu_canvas"
    >
      <li>
        <a
          href="#cut"
          onClick={[Function]}
        >
          Cut
        </a>
      </li>
      <li>
        <a
          href="#copy"
          onClick={[Function]}
        >
          Copy
        </a>
      </li>
      <li>
        <a
          href="#paste"
          onClick={[Function]}
        >
          Paste
        </a>
      </li>
      <li>
        <a
          href="#paste_in_place"
          onClick={[Function]}
        >
          Paste in Place
        </a>
      </li>
      <li
        className="separator"
      >
        <a
          href="#delete"
          onClick={[Function]}
        >
          Delete
        </a>
      </li>
      <li
        className="separator"
      >
        <a
          href="#group"
          onClick={[Function]}
        >
          Group
        </a>
      </li>
      <li>
        <a
          href="#ungroup"
          onClick={[Function]}
        >
          Ungroup
        </a>
      </li>
      <li
        className="separator"
      >
        <a
          href="#move_front"
          onClick={[Function]}
        >
          Bring to Front
        </a>
      </li>
      <li>
        <a
          href="#move_up"
          onClick={[Function]}
        >
          Bring Forward
        </a>
      </li>
      <li>
        <a
          href="#move_down"
          onClick={[Function]}
        >
          Send Backward
        </a>
      </li>
      <li>
        <a
          href="#move_back"
          onClick={[Function]}
        >
          Send to Back
        </a>
      </li>
    </ul>
  </div>
</SVGEditor>
`;

exports[`test Skip-Connect-Machine should render correctly in win 1`] = `
<SVGEditor>
  <div>
    <DummyTaskInterpreterPanel>
      <div>
        This is dummy TaskInterpreterPanel
      </div>
    </DummyTaskInterpreterPanel>
    <div
      className=""
      id="svg_editor"
    >
      <div
        className=""
        id="rulers"
      >
        <div
          id="ruler_corner"
        />
        <div
          id="ruler_x"
        >
          <div>
            <canvas
              height={15}
            />
          </div>
        </div>
        <div
          id="ruler_y"
        >
          <div>
            <canvas
              width={15}
            />
          </div>
        </div>
        <div
          id="ruler_unit_shower"
        >
          mm
        </div>
      </div>
      <div
        className=""
        id="workarea"
      >
        <style
          dangerouslySetInnerHTML={
            Object {
              "__html": "",
            }
          }
          id="styleoverrides"
          media="screen"
          scoped="scoped"
          type="text/css"
        />
        <div
          id="svgcanvas"
          style={
            Object {
              "position": "relative",
            }
          }
        />
      </div>
      <DummyRightPanelContextProvider>
        <div>
          This is dummy RightPanelContextProvider
          <DummyRightPanel>
            <div>
              This is dummy RightPanel
            </div>
          </DummyRightPanel>
        </div>
      </DummyRightPanelContextProvider>
      <div
        id="main_button"
      >
        <div
          className="tool_button"
          id="main_icon"
          title="Main Menu"
        >
          <span>
            SVG-Edit
          </span>
          <div
            id="logo"
          />
          <div
            className="dropdown"
          />
        </div>
        <div
          id="main_menu"
        >
          <ul>
            <li
              id="tool_clear"
            >
              <div />
              New Image (N)
            </li>
            <li
              id="tool_open"
              style={
                Object {
                  "display": "none",
                }
              }
            >
              <div
                id="fileinputs"
              >
                <div />
              </div>
              Open SVG
            </li>
            <li
              id="tool_import"
              style={
                Object {
                  "display": "none",
                }
              }
            >
              <div
                id="fileinputs_import"
              >
                <div />
              </div>
              Import Image
            </li>
            <li
              id="tool_save"
            >
              <div />
              Save Image (S)
            </li>
            <li
              id="tool_export"
            >
              <div />
              Export
            </li>
            <li
              id="tool_docprops"
            >
              <div />
              Document Properties (D)
            </li>
          </ul>
          <p>
            <a
              href="https://github.com/SVG-Edit/svgedit"
              rel="noreferrer"
              target="_blank"
            >
              SVG-edit Home Page
            </a>
          </p>
          <button
            id="tool_prefs_option"
            type="button"
          >
            Editor Options
          </button>
        </div>
      </div>
      <div
        className="tools_panel"
        id="tools_top"
      >
        <div
          id="editor_panel"
        >
          <div
            className="tool_sep"
          />
          <div
            className="push_button"
            id="tool_source"
            title="Edit Source [U]"
          />
          <div
            className="tool_button"
            id="tool_wireframe"
            title="Wireframe Mode [F]"
          />
        </div>
        <div
          id="history_panel"
        >
          <div
            className="tool_sep"
          />
          <div
            className="push_button tool_button_disabled"
            id="tool_undo"
            title="Undo [Z]"
          />
          <div
            className="push_button tool_button_disabled"
            id="tool_redo"
            title="Redo [Y]"
          />
        </div>
        <div
          id="selected_panel"
        >
          <div
            className="toolset"
          >
            <div
              className="tool_sep"
            />
            <div
              className="push_button"
              id="tool_clone"
              title="Duplicate Element [D]"
            />
            <div
              className="push_button"
              id="tool_delete"
              title="Delete Element [Delete/Backspace]"
            />
            <div
              className="tool_sep"
            />
            <div
              className="push_button"
              id="tool_move_top"
              title="Bring to Front [ Ctrl+Shift+] ]"
            />
            <div
              className="push_button"
              id="tool_move_bottom"
              title="Send to Back [ Ctrl+Shift+[ ]"
            />
            <div
              className="push_button"
              id="tool_topath"
              title="Convert to Path"
            />
            <div
              className="push_button"
              id="tool_reorient"
              title="Reorient path"
            />
            <div
              className="push_button"
              id="tool_make_link"
              title="Make (hyper)link"
            />
            <div
              className="tool_sep"
            />
            <label
              id="idLabel"
              title="Identify the element"
            >
              <span>
                id:
              </span>
              <input
                className="attr_changer"
                data-attr="id"
                id="elem_id"
                size={10}
                type="text"
              />
            </label>
            <label
              id="classLabel"
              title="Element class"
            >
              <span>
                class:
              </span>
              <input
                className="attr_changer"
                data-attr="class"
                id="elem_class"
                size={10}
                type="text"
              />
            </label>
          </div>
          <label
            className="toolset"
            id="tool_angle"
            title="Change rotation angle"
          >
            <span
              className="icon_label"
              id="angleLabel"
            />
            <input
              defaultValue={0}
              id="angle"
              size={2}
              type="text"
            />
          </label>
          <div
            className="toolset"
            id="tool_blur"
            title="Change gaussian blur value"
          >
            <label>
              <span
                className="icon_label"
                id="blurLabel"
              />
              <input
                defaultValue={0}
                id="blur"
                size={2}
                type="text"
              />
            </label>
            <div
              className="dropdown"
              id="blur_dropdown"
            >
              <button
                type="button"
              />
              <ul>
                <li
                  className="special"
                >
                  <div
                    id="blur_slider"
                  />
                </li>
              </ul>
            </div>
          </div>
          <div
            className="dropdown toolset"
            id="tool_position"
            title="Align Element to Page"
          >
            <div
              className="icon_label"
              id="cur_position"
            />
            <button
              type="button"
            />
          </div>
          <div
            className="toolset"
            id="xy_panel"
          >
            <label>
              x:
               
              <input
                className="attr_changer"
                data-attr="x"
                id="selected_x"
                size={3}
                title="Change X coordinate"
              />
            </label>
            <label>
              y:
               
              <input
                className="attr_changer"
                data-attr="y"
                id="selected_y"
                size={3}
                title="Change Y coordinate"
              />
            </label>
          </div>
        </div>
        <div
          id="multiselected_panel"
        >
          <div
            className="tool_sep"
          />
          <div
            className="push_button"
            id="tool_clone_multi"
            title="Clone Elements [C]"
          />
          <div
            className="push_button"
            id="tool_delete_multi"
            title="Delete Selected Elements [Delete/Backspace]"
          />
          <div
            className="tool_sep"
          />
          <div
            className="push_button"
            id="tool_group_elements"
            title="Group Elements [G]"
          />
          <div
            className="push_button"
            id="tool_make_link_multi"
            title="Make (hyper)link"
          />
          <div
            className="push_button"
            id="tool_alignleft"
            title="Align Left"
          />
          <div
            className="push_button"
            id="tool_aligncenter"
            title="Align Center"
          />
          <div
            className="push_button"
            id="tool_alignright"
            title="Align Right"
          />
          <div
            className="push_button"
            id="tool_aligntop"
            title="Align Top"
          />
          <div
            className="push_button"
            id="tool_alignmiddle"
            title="Align Middle"
          />
          <div
            className="push_button"
            id="tool_alignbottom"
            title="Align Bottom"
          />
          <label
            id="tool_align_relative"
          >
            <span
              id="relativeToLabel"
            >
              relative to:
            </span>
            <select
              id="align_relative_to"
              title="Align relative to ..."
            >
              <option
                id="selected_objects"
                value="selected"
              >
                selected objects
              </option>
              <option
                id="largest_object"
                value="largest"
              >
                largest object
              </option>
              <option
                id="smallest_object"
                value="smallest"
              >
                smallest object
              </option>
              <option
                id="page"
                value="page"
              >
                page
              </option>
            </select>
          </label>
          <div
            className="tool_sep"
          />
        </div>
        <div
          id="rect_panel"
        >
          <div
            className="toolset"
          >
            <label
              id="rect_width_tool"
              title="Change rectangle width"
            >
              <span
                className="icon_label"
                id="rwidthLabel"
              />
              <input
                className="attr_changer"
                data-attr="width"
                id="rect_width"
                size={3}
              />
            </label>
            <label
              id="rect_height_tool"
              title="Change rectangle height"
            >
              <span
                className="icon_label"
                id="rheightLabel"
              />
              <input
                className="attr_changer"
                data-attr="height"
                id="rect_height"
                size={3}
              />
            </label>
          </div>
          <label
            className="toolset"
            id="cornerRadiusLabel"
            title="Change Rectangle Corner Radius"
          >
            <span
              className="icon_label"
            />
            <input
              data-attr="Corner Radius"
              defaultValue={0}
              id="rect_rx"
              size={3}
              type="text"
            />
          </label>
        </div>
        <div
          id="image_panel"
        >
          <div
            className="toolset"
          >
            <label>
              <span
                className="icon_label"
                id="iwidthLabel"
              />
              <input
                className="attr_changer"
                data-attr="width"
                id="image_width"
                size={3}
                title="Change image width"
              />
            </label>
            <label>
              <span
                className="icon_label"
                id="iheightLabel"
              />
              <input
                className="attr_changer"
                data-attr="height"
                id="image_height"
                size={3}
                title="Change image height"
              />
            </label>
          </div>
          <div
            className="toolset"
          >
            <label
              id="tool_image_url"
            >
              url:
              <input
                id="image_url"
                size={35}
                title="Change URL"
                type="text"
              />
            </label>
            <label
              id="tool_change_image"
            >
              <button
                id="change_image_url"
                style={
                  Object {
                    "display": "none",
                  }
                }
                type="button"
              >
                Change Image
              </button>
              <span
                id="url_notice"
                title="NOTE: This image cannot be embedded. It will depend on this path to be displayed"
              />
            </label>
          </div>
        </div>
        <div
          id="circle_panel"
        >
          <div
            className="toolset"
          >
            <label
              id="tool_circle_cx"
            >
              cx:
              <input
                className="attr_changer"
                data-attr="cx"
                id="circle_cx"
                size={3}
                title="Change circle's cx coordinate"
              />
            </label>
            <label
              id="tool_circle_cy"
            >
              cy:
              <input
                className="attr_changer"
                data-attr="cy"
                id="circle_cy"
                size={3}
                title="Change circle's cy coordinate"
              />
            </label>
          </div>
          <div
            className="toolset"
          >
            <label
              id="tool_circle_r"
            >
              r:
              <input
                className="attr_changer"
                data-attr="r"
                id="circle_r"
                size={3}
                title="Change circle's radius"
              />
            </label>
          </div>
        </div>
        <div
          id="ellipse_panel"
        >
          <div
            className="toolset"
          >
            <label
              id="tool_ellipse_cx"
            >
              cx:
              <input
                className="attr_changer"
                data-attr="cx"
                id="ellipse_cx"
                size={3}
                title="Change ellipse's cx coordinate"
              />
            </label>
            <label
              id="tool_ellipse_cy"
            >
              cy:
              <input
                className="attr_changer"
                data-attr="cy"
                id="ellipse_cy"
                size={3}
                title="Change ellipse's cy coordinate"
              />
            </label>
          </div>
          <div
            className="toolset"
          >
            <label
              id="tool_ellipse_rx"
            >
              rx:
              <input
                className="attr_changer"
                data-attr="rx"
                id="ellipse_rx"
                size={3}
                title="Change ellipse's x radius"
              />
            </label>
            <label
              id="tool_ellipse_ry"
            >
              ry:
              <input
                className="attr_changer"
                data-attr="ry"
                id="ellipse_ry"
                size={3}
                title="Change ellipse's y radius"
              />
            </label>
          </div>
        </div>
        <div
          id="line_panel"
        >
          <div
            className="toolset"
          >
            <label
              id="tool_line_x1"
            >
              x1:
              <input
                className="attr_changer"
                data-attr="x1"
                id="line_x1"
                size={3}
                title="Change line's starting x coordinate"
              />
            </label>
            <label
              id="tool_line_y1"
            >
              y1:
              <input
                className="attr_changer"
                data-attr="y1"
                id="line_y1"
                size={3}
                title="Change line's starting y coordinate"
              />
            </label>
          </div>
          <div
            className="toolset"
          >
            <label
              id="tool_line_x2"
            >
              x2:
              <input
                className="attr_changer"
                data-attr="x2"
                id="line_x2"
                size={3}
                title="Change line's ending x coordinate"
              />
            </label>
            <label
              id="tool_line_y2"
            >
              y2:
              <input
                className="attr_changer"
                data-attr="y2"
                id="line_y2"
                size={3}
                title="Change line's ending y coordinate"
              />
            </label>
          </div>
        </div>
        <div
          id="text_panel"
        >
          <div
            className="toolset"
          >
            <div
              className="tool_button"
              id="tool_bold"
              title="Bold Text [B]"
            >
              <span />
              B
            </div>
            <div
              className="tool_button"
              id="tool_italic"
              title="Italic Text [I]"
            >
              <span />
              i
            </div>
          </div>
          <div
            className="toolset"
            id="tool_font_family"
          >
            <label>
              <input
                id="font_family"
                size={12}
                title="Change Font Family"
                type="text"
              />
            </label>
            <div
              className="dropdown"
              id="font_family_dropdown"
            >
              <button
                type="button"
              />
              <ul>
                <li
                  style={
                    Object {
                      "fontFamily": "serif",
                    }
                  }
                >
                  Serif
                </li>
                <li
                  style={
                    Object {
                      "fontFamily": "sans-serif",
                    }
                  }
                >
                  Sans-serif
                </li>
                <li
                  style={
                    Object {
                      "fontFamily": "cursive",
                    }
                  }
                >
                  Cursive
                </li>
                <li
                  style={
                    Object {
                      "fontFamily": "fantasy",
                    }
                  }
                >
                  Fantasy
                </li>
                <li
                  style={
                    Object {
                      "fontFamily": "monospace",
                    }
                  }
                >
                  Monospace
                </li>
              </ul>
            </div>
          </div>
          <label
            id="tool_font_size"
            title="Change Font Size"
          >
            <span
              className="icon_label"
              id="font_sizeLabel"
            />
            <input
              defaultValue={0}
              id="font_size"
              size={3}
              type="text"
            />
          </label>
          <input
            id="text"
            size={35}
            type="text"
          />
        </div>
        <div
          id="container_panel"
        >
          <div
            className="tool_sep"
          />
          <label
            id="group_title"
            title="Group identification label"
          >
            <span>
              label:
            </span>
            <input
              data-attr="title"
              id="g_title"
              size={10}
              type="text"
            />
          </label>
        </div>
        <div
          id="use_panel"
        >
          <div
            className="push_button"
            id="tool_unlink_use"
            title="Break link to reference element (make unique)"
          />
        </div>
        <div
          id="g_panel"
        >
          <div
            className="push_button"
            id="tool_ungroup"
            title="Ungroup Elements [G]"
          />
        </div>
        <div
          id="a_panel"
        >
          <label
            id="tool_link_url"
            title="Set link URL (leave empty to remove)"
          >
            <span
              className="icon_label"
              id="linkLabel"
            />
            <input
              id="link_url"
              size={35}
              type="text"
            />
          </label>
        </div>
        <div
          id="path_node_panel"
        >
          <div
            className="tool_sep"
          />
          <div
            className="tool_button push_button_pressed"
            id="tool_node_link"
            title="Link Control Points"
          />
          <div
            className="tool_sep"
          />
          <label
            id="tool_node_x"
          >
            x:
            <input
              className="attr_changer"
              data-attr="x"
              id="path_node_x"
              size={3}
              title="Change node's x coordinate"
            />
          </label>
          <label
            id="tool_node_y"
          >
            y:
            <input
              className="attr_changer"
              data-attr="y"
              id="path_node_y"
              size={3}
              title="Change node's y coordinate"
            />
          </label>
          <select
            defaultValue={4}
            id="seg_type"
            title="Change Segment type"
          >
            <option
              id="straight_segments"
              value={4}
            >
              Straight
            </option>
            <option
              id="curve_segments"
              value={6}
            >
              Curve
            </option>
          </select>
          <div
            className="tool_button"
            id="tool_node_clone"
            title="Clone Node"
          />
          <div
            className="tool_button"
            id="tool_node_delete"
            title="Delete Node"
          />
          <div
            className="tool_button"
            id="tool_openclose_path"
            title="Open/close sub-path"
          />
          <div
            className="tool_button"
            id="tool_add_subpath"
            title="Add sub-path"
          />
        </div>
      </div>
       
      <div
        id="cur_context_panel"
      />
      <div
        className="tools_panel"
        id="tools_left"
      >
        <div
          className="tool_button"
          id="tool_select"
          title="Select Tool"
        />
        <div
          className="tool_button"
          id="tool_fhpath"
          title="Pencil Tool"
        />
        <div
          className="tool_button"
          id="tool_line"
          title="Line Tool"
        />
        <div
          className="tool_button flyout_current"
          id="tools_rect_show"
          title="Square/Rect Tool"
        >
          <div
            className="flyout_arrow_horiz"
          />
        </div>
        <div
          className="tool_button flyout_current"
          id="tools_ellipse_show"
          title="Ellipse/Circle Tool"
        >
          <div
            className="flyout_arrow_horiz"
          />
        </div>
        <div
          className="tool_button"
          id="tool_path"
          title="Path Tool"
        />
        <div
          className="tool_button"
          id="tool_text"
          title="Text Tool"
        />
        <div
          className="tool_button"
          id="tool_image"
          title="Image Tool"
        />
        <div
          className="tool_button"
          id="tool_zoom"
          title="Zoom Tool [Ctrl+Up/Down]"
        />
        <div
          style={
            Object {
              "display": "none",
            }
          }
        >
          <div
            id="tool_rect"
            title="Rectangle"
          />
          <div
            id="tool_square"
            title="Square"
          />
          <div
            id="tool_fhrect"
            title="Free-Hand Rectangle"
          />
          <div
            id="tool_ellipse"
            title="Ellipse"
          />
          <div
            id="tool_path"
            title="Path"
          />
          <div
            id="tool_polygon"
            title="Polygon"
          />
          <div
            id="tool_grid"
            title="Grid Array"
          />
          <div
            id="tool_circle"
            title="Circle"
          />
          <div
            id="tool_fhellipse"
            title="Free-Hand Ellipse"
          />
        </div>
      </div>
       
      <div
        className="tools_panel"
        id="tools_bottom"
      >
        <div
          className="toolset"
          id="zoom_panel"
          title="Change zoom level"
        >
          <label>
            <span
              className="zoom_tool icon_label"
              id="zoomLabel"
            />
            <input
              defaultValue={100}
              id="zoom"
              size={3}
              type="text"
            />
          </label>
          <div
            className="tool_sep"
          />
        </div>
        <div
          id="tools_bottom_2"
        >
          <div
            id="color_tools"
          >
            <div
              className="color_tool"
              id="tool_fill"
            >
              <label
                className="icon_label"
                htmlFor="fill_color"
                title="Change fill color"
              />
              <div
                className="color_block"
              >
                <div
                  id="fill_bg"
                />
                <div
                  className="color_block"
                  id="fill_color"
                />
              </div>
            </div>
            <div
              className="color_tool"
              id="tool_stroke"
            >
              <label
                className="icon_label"
                title="Change stroke color"
              />
              <div
                className="color_block"
              >
                <div
                  id="stroke_bg"
                />
                <div
                  className="color_block"
                  id="stroke_color"
                  title="Change stroke color"
                />
              </div>
              <label
                className="stroke_label"
              >
                <input
                  data-attr="Stroke Width"
                  defaultValue={5}
                  id="stroke_width"
                  size={2}
                  title="Change stroke width by 1, shift-click to change by 0.1"
                  type="text"
                />
              </label>
              <div
                id="toggle_stroke_tools"
                title="Show/hide more stroke tools"
              />
              <label
                className="stroke_tool"
              >
                <select
                  defaultValue="none"
                  id="stroke_style"
                  title="Change stroke dash style"
                >
                  <option
                    value="none"
                  >
                    —
                  </option>
                  <option
                    value="2,2"
                  >
                    ...
                  </option>
                  <option
                    value="5,5"
                  >
                    - -
                  </option>
                  <option
                    value="5,2,2,2"
                  >
                    - .
                  </option>
                  <option
                    value="5,2,2,2,2,2"
                  >
                    - ..
                  </option>
                </select>
              </label>
              <div
                className="stroke_tool dropdown"
                id="stroke_linejoin"
              >
                <div
                  id="cur_linejoin"
                  title="Linejoin: Miter"
                />
                <button
                  type="button"
                />
              </div>
              <div
                className="stroke_tool dropdown"
                id="stroke_linecap"
              >
                <div
                  id="cur_linecap"
                  title="Linecap: Butt"
                />
                <button
                  type="button"
                />
              </div>
            </div>
            <div
              className="color_tool"
              id="tool_opacity"
              title="Change selected item opacity"
            >
              <label>
                <span
                  className="icon_label"
                  id="group_opacityLabel"
                />
                <input
                  defaultValue={100}
                  id="group_opacity"
                  size={3}
                  type="text"
                />
              </label>
              <div
                className="dropdown"
                id="opacity_dropdown"
              >
                <button
                  type="button"
                />
                <ul>
                  <li>
                    0%
                  </li>
                  <li>
                    25%
                  </li>
                  <li>
                    50%
                  </li>
                  <li>
                    75%
                  </li>
                  <li>
                    100%
                  </li>
                  <li
                    className="special"
                  >
                    <div
                      id="opac_slider"
                    />
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
        <div
          id="tools_bottom_3"
        >
          <div
            id="palette_holder"
          >
            <div
              id="palette"
              title="Click to change fill color, shift-click to change stroke color"
            />
          </div>
        </div>
      </div>
      <div
        className="dropdown"
        id="option_lists"
      >
        <ul
          id="linejoin_opts"
        >
          <li
            className="tool_button current"
            id="linejoin_miter"
            title="Linejoin: Miter"
          />
          <li
            className="tool_button"
            id="linejoin_round"
            title="Linejoin: Round"
          />
          <li
            className="tool_button"
            id="linejoin_bevel"
            title="Linejoin: Bevel"
          />
        </ul>
        <ul
          id="linecap_opts"
        >
          <li
            className="tool_button current"
            id="linecap_butt"
            title="Linecap: Butt"
          />
          <li
            className="tool_button"
            id="linecap_square"
            title="Linecap: Square"
          />
          <li
            className="tool_button"
            id="linecap_round"
            title="Linecap: Round"
          />
        </ul>
        <ul
          className="optcols3"
          id="position_opts"
        >
          <li
            className="push_button"
            id="tool_posleft"
            title="Align Left"
          />
          <li
            className="push_button"
            id="tool_poscenter"
            title="Align Center"
          />
          <li
            className="push_button"
            id="tool_posright"
            title="Align Right"
          />
          <li
            className="push_button"
            id="tool_postop"
            title="Align Top"
          />
          <li
            className="push_button"
            id="tool_posmiddle"
            title="Align Middle"
          />
          <li
            className="push_button"
            id="tool_posbottom"
            title="Align Bottom"
          />
        </ul>
      </div>
      <div
        id="color_picker"
      />
    </div>
     
    <div
      id="svg_source_editor"
    >
      <div
        className="overlay"
      />
      <div
        id="svg_source_container"
      >
        <div
          className="toolbar_button"
          id="tool_source_back"
        >
          <button
            id="tool_source_save"
            type="button"
          >
            Apply Changes
          </button>
          <button
            id="tool_source_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <div
          id="save_output_btns"
        >
          <p
            id="copy_save_note"
          >
            Copy the contents of this box into a text editor, then save the file with a .svg extension.
          </p>
          <button
            id="copy_save_done"
            type="button"
          >
            Done
          </button>
        </div>
        <form>
          <textarea
            defaultValue=""
            id="svg_source_textarea"
            spellCheck="false"
          />
        </form>
      </div>
    </div>
    <div
      id="svg_docprops"
    >
      <div
        className="overlay"
      />
      <div
        id="svg_docprops_container"
      >
        <div
          className="toolbar_button"
          id="tool_docprops_back"
        >
          <button
            id="tool_docprops_save"
            type="button"
          >
            OK
          </button>
          <button
            id="tool_docprops_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <fieldset
          id="svg_docprops_docprops"
        >
          <legend
            id="svginfo_image_props"
          >
            Image Properties
          </legend>
          <label>
            <span
              id="svginfo_title"
            >
              Title:
            </span>
            <input
              id="canvas_title"
              type="text"
            />
          </label>
          <fieldset
            id="change_resolution"
          >
            <legend
              id="svginfo_dim"
            >
              Canvas Dimensions
            </legend>
            <label>
              <span
                id="svginfo_width"
              >
                width:
              </span>
               
              <input
                id="canvas_width"
                size={6}
                type="text"
              />
            </label>
            <label>
              <span
                id="svginfo_height"
              >
                height:
              </span>
               
              <input
                id="canvas_height"
                size={6}
                type="text"
              />
            </label>
            <label>
              <select
                defaultValue="predefined"
                id="resolution"
              >
                <option
                  id="selectedPredefined"
                  value="predefined"
                >
                  Select predefined:
                </option>
                <option>
                  640x480
                </option>
                <option>
                  800x600
                </option>
                <option>
                  1024x768
                </option>
                <option>
                  1280x960
                </option>
                <option>
                  1600x1200
                </option>
                <option
                  id="fitToContent"
                  value="content"
                >
                  Fit to Content
                </option>
              </select>
            </label>
          </fieldset>
          <fieldset
            id="image_save_opts"
          >
            <legend
              id="includedImages"
            >
              Included Images
            </legend>
            <label>
              <input
                defaultChecked="checked"
                defaultValue="embed"
                name="image_opt"
                type="radio"
              />
               
              <span
                id="image_opt_embed"
              >
                Embed data (local files)
              </span>
               
            </label>
            <label>
              <input
                defaultValue="ref"
                name="image_opt"
                type="radio"
              />
               
              <span
                id="image_opt_ref"
              >
                Use file reference
              </span>
               
            </label>
          </fieldset>
        </fieldset>
      </div>
    </div>
    <div
      id="svg_prefs"
    >
      <div
        className="overlay"
      />
      <div
        id="svg_prefs_container"
      >
        <div
          className="toolbar_button"
          id="tool_prefs_back"
        >
          <button
            id="tool_prefs_save"
            type="button"
          >
            OK
          </button>
          <button
            id="tool_prefs_cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
        <fieldset>
          <legend
            id="svginfo_editor_prefs"
          >
            Editor Preferences
          </legend>
          <label>
            <span
              id="svginfo_lang"
            >
              Language:
            </span>
            <select
              defaultValue="en"
              id="lang_select"
            >
              <option
                id="lang_de"
                value="de"
              >
                Deutsche
              </option>
              <option
                id="lang_en"
                value="en"
              >
                English
              </option>
              <option
                id="lang_zh-TW"
                value="zh-TW"
              >
                繁體中文
              </option>
              <option
                id="lang_ja"
                value="ja"
              >
                日本語
              </option>
              <option
                id="lang_zh-CN"
                value="es"
              >
                Español
              </option>
              <option
                id="lang_zh-CN"
                value="zh-CN"
              >
                簡中
              </option>
            </select>
          </label>
          <label>
            <span
              id="svginfo_icons"
            >
              Icon size:
            </span>
            <select
              defaultValue="m"
              id="iconsize"
            >
              <option
                id="icon_small"
                value="s"
              >
                Small
              </option>
              <option
                id="icon_medium"
                value="m"
              >
                Medium
              </option>
              <option
                id="icon_large"
                value="l"
              >
                Large
              </option>
              <option
                id="icon_xlarge"
                value="xl"
              >
                Extra Large
              </option>
            </select>
          </label>
          <fieldset
            id="change_background"
          >
            <legend
              id="svginfo_change_background"
            >
              Editor Background
            </legend>
            <div
              id="bg_blocks"
            />
            <label>
              <span
                id="svginfo_bg_url"
              >
                URL:
              </span>
               
              <input
                id="canvas_bg_url"
                type="text"
              />
            </label>
            <p
              id="svginfo_bg_note"
            >
              Note: Background will not be saved with image.
            </p>
          </fieldset>
          <fieldset
            id="change_grid"
          >
            <legend
              id="svginfo_grid_settings"
            >
              Grid
            </legend>
            <label>
              <span
                id="svginfo_snap_onoff"
              >
                Snapping on/off
              </span>
              <input
                defaultValue="snapping_on"
                id="grid_snapping_on"
                type="checkbox"
              />
            </label>
            <label>
              <span
                id="svginfo_snap_step"
              >
                Snapping Step-Size:
              </span>
               
              <input
                defaultValue={10}
                id="grid_snapping_step"
                size={3}
                type="text"
              />
            </label>
            <label>
              <span
                id="svginfo_grid_color"
              >
                Grid color:
              </span>
               
              <input
                defaultValue="#000"
                id="grid_color"
                size={3}
                type="text"
              />
            </label>
          </fieldset>
          <fieldset
            id="units_rulers"
          >
            <legend
              id="svginfo_units_rulers"
            >
              Units & Rulers
            </legend>
            <label>
              <span
                id="svginfo_rulers_onoff"
              >
                Show rulers
              </span>
              <input
                defaultChecked="checked"
                defaultValue="show_rulers"
                id="show_rulers"
                type="checkbox"
              />
            </label>
            <label>
              <span
                id="svginfo_unit"
              >
                Base Unit:
              </span>
              <select
                id="base_unit"
              >
                <option
                  value="px"
                >
                  Pixels
                </option>
                <option
                  value="cm"
                >
                  Centimeters
                </option>
                <option
                  value="mm"
                >
                  Millimeters
                </option>
                <option
                  value="in"
                >
                  Inches
                </option>
                <option
                  value="pt"
                >
                  Points
                </option>
                <option
                  value="pc"
                >
                  Picas
                </option>
                <option
                  value="em"
                >
                  Ems
                </option>
                <option
                  value="ex"
                >
                  Exs
                </option>
              </select>
            </label>
          </fieldset>
        </fieldset>
      </div>
    </div>
    <div
      id="dialog_box"
    >
      <div
        className="overlay"
      />
      <div
        id="dialog_container"
      >
        <div
          id="dialog_content"
        />
        <div
          id="dialog_buttons"
        />
      </div>
    </div>
    <ul
      className="contextMenu"
      id="cmenu_canvas"
    >
      <li>
        <a
          href="#cut"
          onClick={[Function]}
        >
          Cut
        </a>
      </li>
      <li>
        <a
          href="#copy"
          onClick={[Function]}
        >
          Copy
        </a>
      </li>
      <li>
        <a
          href="#paste"
          onClick={[Function]}
        >
          Paste
        </a>
      </li>
      <li>
        <a
          href="#paste_in_place"
          onClick={[Function]}
        >
          Paste in Place
        </a>
      </li>
      <li
        className="separator"
      >
        <a
          href="#delete"
          onClick={[Function]}
        >
          Delete
        </a>
      </li>
      <li
        className="separator"
      >
        <a
          href="#group"
          onClick={[Function]}
        >
          Group
        </a>
      </li>
      <li>
        <a
          href="#ungroup"
          onClick={[Function]}
        >
          Ungroup
        </a>
      </li>
      <li
        className="separator"
      >
        <a
          href="#move_front"
          onClick={[Function]}
        >
          Bring to Front
        </a>
      </li>
      <li>
        <a
          href="#move_up"
          onClick={[Function]}
        >
          Bring Forward
        </a>
      </li>
      <li>
        <a
          href="#move_down"
          onClick={[Function]}
        >
          Send Backward
        </a>
      </li>
      <li>
        <a
          href="#move_back"
          onClick={[Function]}
        >
          Send to Back
        </a>
      </li>
    </ul>
  </div>
</SVGEditor>
`;
